Fix date formating on safari. Update loading styles.

--- a/src/css/feriados.css
+++ b/src/css/feriados.css
@@ -76,25 +76,7 @@
 
   right: 0;
   background-color: var(--bg-box-color);
-}
-
-.slideout-move.slideout-menu {
-  z-index: 3;
-  will-change: transform;
-}
-
-.slideout-move.slideout-panel {
-  position: relative;
-  z-index: 1;
-  will-change: transform;
-}
-
-.slideout-move.slideout-menu-left {
-  left: -256px;
-}
-
-.slideout-move.slideout-menu-right {
-  right: -256px;
+  visibility: hidden;
 }
 
 .slideout-panel {
@@ -123,6 +105,7 @@
 
 .slideout-open .slideout-menu {
   display: block;
+  visibility: visible;
 }
 
 .slideout-open .slideout-dimmer {
@@ -130,6 +113,7 @@
   opacity: 1;
   z-index: 2;
 }
+
 
 /**
  * Global
@@ -341,11 +325,12 @@ nav {
 }
 
 .loading {
+  display: block;
   position: absolute;
   top: 150px;
   left: 50%;
-  display: block;
   width: 70px;
+  margin-left: -35px;
 }
 
 .share-buttons {
